--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,4 +20,11 @@
 	<string name="errLoad">Failed to load. Try again!</string>
 	
 	<string name="menu">Menu</string>
+	
+	<string name="serverState">Server Status</string>
+	
+	<string name="shutout">Not avaliable</string><color name="shutout">#ED1A3D</color>
+	<string name="online">Online</string><color name="online">#00793D</color>
+	<string name="offline">Offline</string><color name="offline">#ED1A3D</color>
+	<string name="whitelist">Whitelist</string><color name="whitelist">#FFC40C</color>
 </resources>
