--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -3,7 +3,7 @@
 	<string name="murasyou">村ショウ鯖公式アプリへようこそ!</string>
     <string name="app_name">村ショウ鯖公式アプリ</string>
 	<string name="information">基本情報</string>
-	<string name="ip">IPアドレス:222.2.87.59</string>
+	<string name="ip">IPアドレス:murasyou.dip.jp</string>
 	<string name="port">ポート:19132</string>
 	<string name="owner">鯖主(オーナー):村ショウ</string>
 	<string name="sites">ウェブサイトへのリンク</string>
